--- a/pages/semantics.html
+++ b/pages/semantics.html
@@ -43,7 +43,7 @@
     </nav>
 
     <div class="main-content">
-        <h1 style="text-align: center;">Cимантика</h1>
+        <h1 style="text-align: center;">Ceмантика</h1>
         <div style="display: flex; justify-content: center;align-items: center;">
             <div style="width: 500px;background-color: dimgrey; padding: 5px;border: 1px solid black;font-size: 20px;text-align: center;margin-right: 25px;">
                 <header style="line-height: 50px; background-color: #fff;margin-bottom: 5px;text-align: center;">
@@ -82,8 +82,7 @@
                     <tbody>
                     <tr>
                         <th style="width:20%">Тег</th>
-                        <th>Признmmmmmm
-                            ачення</th>
+                        <th>Призначення</th>
                     </tr>
                     <tr>
                         <td>&lt;article&gt;</td>
