--- a/pages/semantics.html
+++ b/pages/semantics.html
@@ -37,7 +37,7 @@
                     class="one-line">&lt;img&gt;, &lt;audio&gt;, &lt;video&gt;</span></a>
             </li>
             <li><a href="semantics.html" class="nav-list-link active"><span class="link-num">13</span><span
-                    class="one-line">Симантика</span></a>
+                    class="one-line">Семантика</span></a>
             </li>
         </ol>
     </nav>
