--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </li>
             <li><a href="pages/img-audio-video.html" class="nav-list-link"><span class="link-num">12</span><span class="one-line">&lt;img&gt;, &lt;audio&gt;, &lt;video&gt;</span></a>
             </li>
-            <li><a href="pages/semantics.html" class="nav-list-link"><span class="link-num">13</span><span class="one-line">Симантика</span></a>
+            <li><a href="pages/semantics.html" class="nav-list-link"><span class="link-num">13</span><span class="one-line">Семантика</span></a>
             </li>
         </ol>
     </nav>
