--- a/fonts.html
+++ b/fonts.html
@@ -165,6 +165,21 @@
                                                                style="word-spacing: 1rem">px rem em pt %</span></td>
                     <td>.selector {<br>&emsp;font-size: 18px;<br>}</td>
                 </tr>
+                <tr>
+                    <td><span class="blue">font-stretch</span></td>
+                    <td>
+                        <ul>
+                            <li><span class="green">condensed (ultra-, extra-, semi- )</span>- <span
+                                style="font-stretch: condensed;">guba karo mate senom</span></li>
+                            <li><span class="green">normal</span>- <span
+                                style="font-stretch: condensed;">guba karo mate senom</span></li>
+                            <li><span class="green">expanded (ultra-, extra-, semi- )</span>- <span style="font-stretch: expanded">guba karo mate senom</span>
+                            </li>
+                        </ul>
+                    </td>
+                    <td>хрень неробоча</td>
+                    <td></td>
+                </tr>
                 </tbody>
             </table>
 
