--- a/html/html/h.html
+++ b/html/html/h.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title class="b-title">H</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link href="../img/favicon.ico" rel="shortcut icon" type="image/x-icon">
 </head>
 <body>
 
 <main>
     <nav class="page-nav">
+        <a href="../../index.html" class="to-home"> < Home </a>
         <ol class="nav-list">
-            <li><a href="../index.html" class="nav-list-link"><span class="link-num">1</span>Структура HTML (правило
+            <li><a href="index.html" class="nav-list-link"><span class="link-num">1</span>Структура HTML (правило
                 вкладення, коментар)</a></li>
             <li><a href="tags.html" class="nav-list-link"><span class="link-num">2</span>Парні не парні теги.<br />
                 Блочні і
