--- a/block_style.html
+++ b/block_style.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <nav class="main-nav"><a class="to-home" href="index.html">< Home</a>
-      <div class="nav-block"><a class="nav-link" href="selectors.html"><span class='nav-link-num'>1</span> Селектори, Псевдокласи, Каскадність, Псевдоелементи</a><a class="nav-link" href="css_boxmodel.html"><span class='nav-link-num'>2</span> СSS Box model</a><a class="nav-link" href="measurement.html"><span class='nav-link-num'>3</span> Одиниці виміру</a><a class="nav-link" href="position.html"><span class='nav-link-num'>4</span> Позиціонування</a><a class="nav-link" href="fonts.html"><span class='nav-link-num'>5</span> Стилізація тексту</a><a class="nav-link" href="block_style.html"><span class='nav-link-num'>6</span> Стилізація елементів</a><a class="nav-link" href=""><span class='nav-link-num'>7</span> @media</a><a class="nav-link" href="fonts.html"><span class='nav-link-num'>8</span> Анімація (2D, 3D)</a><a class="nav-link" href=""><span class='nav-link-num'>10</span> Display</a><a class="nav-link" href=""><span class='nav-link-num'>11</span> Префікси</a><a class="nav-link" href=""><span class='nav-link-num'>12</span> SVG</a><a class="nav-link" href=""><span class='nav-link-num'>13</span> Спрайти</a></div>
+      <div class="nav-block"><a class="nav-link" href="selectors.html"><span class='nav-link-num'>1</span> Селектори, Псевдокласи, Каскадність, Псевдоелементи</a><a class="nav-link" href="css_boxmodel.html"><span class='nav-link-num'>2</span> СSS Box model</a><a class="nav-link" href="measurement.html"><span class='nav-link-num'>3</span> Одиниці виміру</a><a class="nav-link" href="position.html"><span class='nav-link-num'>4</span> Позиціонування</a><a class="nav-link" href="fonts.html"><span class='nav-link-num'>5</span> Стилізація тексту</a><a class="nav-link" href="block_style.html"><span class='nav-link-num'>6</span> Стилізація елементів</a><a class="nav-link" href="media.html"><span class='nav-link-num'>7</span> @media</a><a class="nav-link" href="fonts.html"><span class='nav-link-num'>8</span> Анімація (2D, 3D)</a><a class="nav-link" href=""><span class='nav-link-num'>10</span> Display</a><a class="nav-link" href=""><span class='nav-link-num'>11</span> Префікси</a><a class="nav-link" href=""><span class='nav-link-num'>12</span> SVG</a><a class="nav-link" href=""><span class='nav-link-num'>13</span> Спрайти</a></div>
       <div class="decorate"></div>
     </nav>
     <main class="main-content">
@@ -176,12 +176,13 @@
                 У разі завдання двох параметрів через косу риску, то перший параметр задає радіус по горизонталі, а другий по вертикалі (еліптичні куточки).
               </td>
               <td>
-                <div style="border-radius: 50%;width: 200px;height:50px;background-color:#00a19b;line-height:50px;text-align:center;color:#fff;margin:0 auto 10px;">border-radius: 50%;</div>
-                <div style="border-radius: 50px;width: 200px;height:50px;background-color:#00a19b;line-height:50px;text-align:center;color:#fff;margin:0 auto 10px;">border-radius: 50px;</div>
-                <div style="border-radius: 50px 0 0 50px;width:250px;height:50px;background-color:#00a19b;line-height:50px;text-align:center;color:#fff;margin:0 auto 10px;">border-radius: 50px 0 0 50px;</div>
-                <div style="border-radius: 40px 10px;width:250px;height:50px;background-color:#00a19b;line-height:50px;text-align:center;color:#fff;margin:0 auto 10px;">border-radius: 40px 10px;</div>
-                <div style="border-radius: 13em/3em;width:250px;height:50px;background-color:#00a19b;line-height:50px;text-align:center;color:#fff;margin:0 auto 10px;">border-radius: 13em/3em;</div>
-                <div style="border-radius: 13em 0.5em/1em 0.5em;width:250px;height:50px;background-color:#00a19b;line-height:50px;text-align:center;color:#fff;margin:0 auto 10px;">border-radius: 13em 0.5em/1em 0.5em;</div>
+                <div style="border-radius: 50%;font-size:14px;width: 265px;height:50px;background-color:#00a19b;line-height:50px;text-align:center;color:#fff;margin:0 auto 10px;">border-radius: 50%;</div>
+                <div style="border-radius: 50px;font-size:14px;width: 265px;height:50px;background-color:#00a19b;line-height:50px;text-align:center;color:#fff;margin:0 auto 10px;">border-radius: 50px;</div>
+                <div style="border-radius: 40px 10px;font-size:14px;width:265px;height:50px;background-color:#00a19b;line-height:50px;text-align:center;color:#fff;margin:0 auto 10px;">border-radius: 40px 10px;</div>
+                <div style="border-radius: 40px 10px 20px;font-size:14px;width:265px;height:50px;background-color:#00a19b;line-height:50px;text-align:center;color:#fff;margin:0 auto 10px;">border-radius: 40px 10px 20px;</div>
+                <div style="border-radius: 50px 0 0 50px;font-size:14px;width:265px;height:50px;background-color:#00a19b;line-height:50px;text-align:center;color:#fff;margin:0 auto 10px;">border-radius: 50px 0 0 50px;</div>
+                <div style="border-radius: 30px/10px;font-size:14px;width:265px;height:50px;background-color:#00a19b;line-height:50px;text-align:center;color:#fff;margin:0 auto 10px;">border-radius: 30px/10px;</div>
+                <div style="border-radius: 13em 30px/10px 5em;font-size:14px;width:265px;height:50px;background-color:#00a19b;line-height:50px;text-align:center;color:#fff;margin:0 auto 10px;">border-radius: 13em 0.5em/1em 5em;</div>
               </td>
             </tr>
             <tr>
@@ -196,6 +197,68 @@
                 <div class="back-exemp" id="opa">
                   <div style="opacity:0.5;width:100px;height:100px;background-color:red;color:#fff;margin:auto;padding:10px;">Визначає рівень прозорості елемента.</div>
                 </div>
+              </td>
+            </tr>
+            <tr>
+              <td colspan="3">background / background-image: <span class='blue-text'>linear-gradient / radial-gradient</span></td>
+            </tr>
+            <tr>
+              <td>linear-gradient</td>
+              <td>
+                Функція linear-gradient() додає лінійний градієнт до фону елемента. Вона виступає значенням властивості background-image або background. <br>background-image: linear-gradient(to top, red, blue);<br>
+                Напрямки:<br>
+                to top / to left / to bottom / to right / to top left / to top right / to bottom left / to bottom right / <br>
+                В градусах наприклад: 45deg;<br>
+                Задає кут нахилу градиентної лінії, який показує напрямок градієнта. Спочатку пишеться позитивне або негативне значення кута, потім до нього разом додається deg. Нулю градусів (або 360º) відповідає градієнт від низу до верху, далі відлік ведеться за годинниковою стрілкою. Відлік кута нахилу градиентной лінії показаний нижче.<br>
+                <img src='img/g.png' alt='gradient'>
+              </td>
+              <td>
+                <div class="bgradient" style="background-image: linear-gradient(red, blue);">linear-gradient(red, blue);</div>
+                <div class="bgradient" style="background-image: linear-gradient(to right, red, blue);">linear-gradient(to right, red, blue);</div>
+                <div class="bgradient" style="background-image: linear-gradient(red, blue, green);">linear-gradient(red, blue, green);</div>
+                <div class="bgradient" style="background-image: linear-gradient(-25deg, red, blue);">linear-gradient(-25deg, red, blue);</div>
+                <div class="bgradient" style="background-image: linear-gradient(red, blue 80%, green);">linear-gradient(red, blue 80%, green);</div>
+              </td>
+            </tr>
+            <tr>
+              <td>radial-gradient</td>
+              <td>Функція radial-gradient () додає радіальний градієнт до фону елемента. Радіальні за своїм принципом схожі на лінійні градієнти, але один колір переходить в інший не вздовж прямої лінії, а навколо точки.<br>
+                <!--| Позиція:<br>-->
+                <!--| top left = left top = 0% 0% (в лівому верхньому кутку);<br>-->
+                <!--| top = top center = center top = 50% 0% (по центру вверху);<br>-->
+                <!--| right top = top right = 100% 0% (в правому вурхньому кутку);<br>-->
+                <!--| left = left center = center left = 0% 50% (по лівому краю і по центру);<br>-->
+                <!--| center = center center = 50% 50% (по центру) — default;<br>-->
+                <!--| right = right center = center right = 100% 50% (по правому краю і по центру);<br>-->
+                <!--| bottom left = left bottom = 0% 100% (в лівому нижньому кутку);<br>-->
+                <!--| bottom = bottom center = center bottom = 50% 100% (по центру внизу);<br>-->
+                <!--| bottom right = right bottom = 100% 100% (в правом нижньому кутку).-->
+              </td>
+              <td>
+                <div class="bgradient radial" style="background-image: radial-gradient(red, blue);">radial-gradient(red, blue);</div>
+                <div class="bgradient radial" style="background-image: radial-gradient(red 5%, blue 15%, green 60%);">radial-gradient(red 5%, blue 15%, green 60%);</div>
+                <div class="bgradient radial" style="background-image: radial-gradient(circle, red, blue);">radial-gradient(circle, red, blue);</div>
+                <div class="bgradient radial" style="background-image: radial-gradient(ellipse, red, blue);">radial-gradient(ellipse, red, blue);</div>
+                <div class="bgradient radial" style="background-image: radial-gradient(red 5%, blue 15%, green 60%);">radial-gradient(red 5%, blue 15%, green 60%);</div>
+              </td>
+            </tr>
+            <tr>
+              <td>box-shadow</td>
+              <td>
+                Додає тінь до елементу. Допускається використовувати кілька тіней, вказуючи їх параметри через кому, при накладенні тіней перша тінь в списку буде вище, остання нижче. Якщо для елемента задається радіус округлення через властивість border-radius, то тінь також вийде з закругленими кутами. Додавання тіні збільшує ширину елемента, тому можлива поява горизонтальної смуги прокрутки в браузері.<br><span class='orange-text'>box-shadow:</span> (сдвиг по x) (сдвиг по y) (розмиття) (розтягнення) (колір);<br>
+                <span class='orange-text'>box-shadow:</span> 5px 5px 10px 2px rgba(0,0,0, 0.5);<br>
+                <span class='orange-text'>none</span> - cкасовує додавання тіні.
+                <span class='orange-text'>inset</span> - тінь виводиться всередині елемента.<br>
+                <span class='orange-text'>(сдвиг по x)</span> - здвиг тіні по горизонталі щодо елемента. Позитивне значення цього параметра задає зсув тіні вправо, негативне - вліво.<br>
+                <span class='orange-text'>(сдвиг по y)</span> - здвиг тіні по вертикалі щодо елемента. Позитивне значення задає зсув тіні вниз, негативне - вгору.<br>
+                <span class='orange-text'>(розмиття)</span> - задає радіус розмиття тіні. Чим більше це значення, тим сильніше тінь згладжується, стає ширше і світліше. Якщо цей параметр не заданий, за замовчуванням встановлюється рівним 0, тінь при цьому буде чіткої, а не розмитою.<br>
+                <span class='orange-text'>(розтягнення)</span> - позитивне значення розтягує тінь, негативне, навпаки, її стискає. Якщо цей параметр не заданий, за замовчуванням встановлюється 0, при цьому тінь буде того ж розміру, що і елемент.<br>
+                <span class='orange-text'>(колір)</span> - колір тіні в будь-якому доступному CSS форматі, за замовчуванням тінь чорна.<br>
+                Допускається вказувати кілька тіней, розділяючи їх параметри між собою комою. Враховується наступний порядок: перша тінь в списку розміщується на самому верху, остання в списку - в самому низу.
+              </td>
+              <td>
+                <div style="height:70px;background-color:green;margin-bottom: 20px;box-shadow: 5px 5px 10px 2px rgba(0,0,0, 0.5);">box-shadow: 5px 5px 10px 2px rgba(0,0,0, 0.5);</div>
+                <div style="height:70px;background-color:green;margin-bottom: 20px;box-shadow: inset 5px 5px 10px 2px rgba(0,0,0, 0.5);">box-shadow: inset   5px 5px 10px 2px rgba(0,0,0, 0.5);</div>
               </td>
             </tr>
           </tbody>
