--- a/fonts.html
+++ b/fonts.html
@@ -9,111 +9,13 @@
 </head>
 <body>
 <nav class="main-nav"><a class="to-home" href="index.html">< Home</a>
-    <div class="nav-block"><a class="nav-link" href="selectors.html"><span class='nav-link-num'>1</span> Селектори,
-        Псевдокласи, Каскадність, Псевдоелементи</a><a class="nav-link" href="css_boxmodel.html"><span
-        class='nav-link-num'>2</span> СSS Box model</a><a class="nav-link" href="measurement.html"><span
-        class='nav-link-num'>3</span> Одиниці виміру</a><a class="nav-link" href="position.html"><span
-        class='nav-link-num'>4</span> Позиціонування</a><a class="nav-link" href="fonts.html"><span
-        class='nav-link-num'>5</span> Стилізація тексту</a><a class="nav-link" href="fonts.html"><span
-        class='nav-link-num'>6</span> Стилізація елементів</a><a class="nav-link" href="fonts.html"><span
-        class='nav-link-num'>7</span> @media</a><a class="nav-link" href="fonts.html"><span
-        class='nav-link-num'>8</span> Анімація (2D, 3D)</a><a class="nav-link" href="fonts.html"><span
-        class='nav-link-num'>10</span> Display</a><a class="nav-link" href="fonts.html"><span
-        class='nav-link-num'>11</span> Префікси</a><a class="nav-link" href="fonts.html"><span
-        class='nav-link-num'>12</span> SVG</a><a class="nav-link" href="fonts.html"><span class='nav-link-num'>13</span>
-        Спрайти</a></div>
+    <div class="nav-block"><a class="nav-link" href="selectors.html"><span class='nav-link-num'>1</span> Селектори, Псевдокласи, Каскадність, Псевдоелементи</a><a class="nav-link" href="css_boxmodel.html"><span class='nav-link-num'>2</span> СSS Box model</a><a class="nav-link" href="measurement.html"><span class='nav-link-num'>3</span> Одиниці виміру</a><a class="nav-link" href="position.html"><span class='nav-link-num'>4</span> Позиціонування</a><a class="nav-link" href="fonts.html"><span class='nav-link-num'>5</span> Стилізація тексту</a><a class="nav-link" href="fonts.html"><span class='nav-link-num'>6</span> Стилізація елементів</a><a class="nav-link" href="fonts.html"><span class='nav-link-num'>7</span> @media</a><a class="nav-link" href="fonts.html"><span class='nav-link-num'>8</span> Анімація (2D, 3D)</a><a class="nav-link" href="fonts.html"><span class='nav-link-num'>10</span> Display</a><a class="nav-link" href="fonts.html"><span class='nav-link-num'>11</span> Префікси</a><a class="nav-link" href="fonts.html"><span class='nav-link-num'>12</span> SVG</a><a class="nav-link" href="fonts.html"><span class='nav-link-num'>13</span> Спрайти</a></div>
     <div class="decorate"></div>
 </nav>
 <main class="main-content">
     <div class="container">
         <div class="fonts">
             <h1 class="title">Font</h1>
-            <h2>Підключення шрифту CSS</h2>
-            <p>
-                <span class="r-text">@font-face</span> {<br>
-                &emsp;<span class="y-text">font-family:</span> 'MyFontName';<br>
-                &emsp;<span class="y-text">src</span>: url('../fonts/WebFont.eot') format('eot'),<br>
-                &emsp;&emsp;&emsp;url('../fonts/WebFont.woff') format('woff'),<br>
-                &emsp;&emsp;&emsp;url('../fonts/WebFont.ttf') format('truetype'),<br>
-                &emsp;&emsp;&emsp;url('../fonts/WebFont.svg') format('svg');<br>
-                &emsp;<span class="y-text">font-weight</span>: 400;<br>
-                &emsp;<span class="y-text">font-style</span>: normal;<br>
-                }<br><br>
-
-                <span class="r-text">@font-face</span> {<br>
-                &emsp;<span class="y-text">font-family</span>: 'MyFontName';<br>
-                &emsp;<span class="y-text">src</span>: url('../fonts/WebFont-Bold.eot') format('eot'),<br>
-                &emsp;&emsp;&emsp;url('../fonts/WebFont-Bold.woff') format('woff'),<br>
-                &emsp;&emsp;&emsp;url('../fonts/WebFont-Bold.ttf') format('truetype'),<br>
-                &emsp;&emsp;&emsp;url('../fonts/WebFont-Bold.svg') format('svg');<br>
-                &emsp;<span class="y-text">font-weight</span>: 700;<br>
-                &emsp;<span class="y-text">font-style</span>: normal;<br>
-                }<br><br>
-
-                <span class="r-text">@font-face</span> {<br>
-                &emsp;<span class="y-text">font-family</span>: 'MyFontName';<br>
-                &emsp;<span class="y-text">src</span>: url('../fonts/WebFont-Italic.eot') format('eot'),<br>
-                &emsp;&emsp;&emsp;url('../fonts/WebFont-Italic.woff') format('woff'),<br>
-                &emsp;&emsp;&emsp;url('../fonts/WebFont-Italic.ttf') format('truetype'),<br>
-                &emsp;&emsp;&emsp;url('../fonts/WebFont-Italic.svg') format('svg');<br>
-                &emsp;<span class="y-text">font-weight</span>: normal;<br>
-                &emsp;<span class="y-text">font-style</span>: italic;<br>
-                }
-            </p>
-            <h2>Підключення шрифту SCSS</h2>
-            <p>
-                <span class="y-text">$base-font-data</span> : (<br>
-                &emsp;&emsp;'<span class="b-text">font-folder</span>', '<span class="b-text">font-file-name</span>', '<span class="b-text">font-local-1</span>', '<span class="b-text">font-local-2</span>', '<span class="b-text">font-weight</span>'<br>
-                &emsp;1: ('opensans/', 'open-sans-regular', 'Open Sans', 'Open-Sans-Bold', 400),<br>
-                &emsp;2: ('opensans/', 'open-sans-bold', 'Open Sans', 'OpenSans-Bold', 700)<br>
-                &emsp;3: ('opensans/', 'open-sans-italic', 'Open Sans', 'OpenSans-Italic', 400)<br>
-                );<br><br>
-
-                <span class="y-text">@for</span> <span class="b-text">$i</span> from 1 through length(<span class="b-text">$base-font-data</span>) {<br>
-                &emsp;<span class="y-text">@font-face</span> {<br>
-                &emsp;&emsp;<span class="y-text">font-family</span>: <span class="b-text">MyFontName</span>;<br>
-                &emsp;&emsp;<span class="y-text">font-style:</span> normal;<br>
-                &emsp;&emsp;<span class="y-text">font-weight:</span> nth(map-get(<span class="b-text">$base-font-data</span>, <span class="b-text">$i</span>), 5);<br>
-                &emsp;&emsp;<span class="y-text">src</span>: local(nth(map-get(<span class="b-text">$base-font-data</span>, <span class="b-text">$i</span>), 3)), local(nth(map-get(<span class="b-text">$base-font-data</span>, <span class="b-text">$i</span>),
-                4)),<br>
-                &emsp;&emsp;&emsp;&emsp;url('#{'../fonts/'}#{nth(map-get(<span class="b-text">$base-font-data</span>, <span class="b-text">$i</span>),
-                1)}#{nth(map-get(<span class="b-text">$base-font-data</span>, <span class="b-text">$i</span>), 2)}.woff2') format('woff2'),<br>
-                &emsp;&emsp;&emsp;&emsp;url('#{'../fonts/'}#{nth(map-get(<span class="b-text">$base-font-data</span>, <span class="b-text">$i</span>),
-                1)}#{nth(map-get(<span class="b-text">$base-font-data</span>, <span class="b-text">$i</span>), 2)}.woff') format('woff');<br>
-                &emsp;}<br>
-                }
-            </p>
-
-            <table>
-                <thead>
-                <tr>
-                    <th>Формат</th>
-                    <th>Поддерживают браузеры</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td>eot</td>
-                    <td><ul class="browserCheck"><li>IE6+</li></ul></td>
-                </tr>
-                <tr>
-                    <td>woff</td>
-                    <td><ul class="browserCheck"><li>IE9+</li><li class="ff">FF 3.6+</li><li class="opera">11+</li><li class="chrome">Chrome 6+</li><li class="safari">5.1+</li><li style="background: 0">Opera mobile 11+</li></ul></td>
-                </tr>
-                <tr>
-                    <td>ttf, otf</td>
-                    <td><ul class="browserCheck"><li class="ff">FF 3.5+</li><li class="opera">10+</li><li class="chrome">Chrome 4+</li><li class="safari">3.2+</li><li style="background: 0">Opera mobile 10+</li><li style="background: 0">iOS 4.2+</li><li style="background: 0">Android 2.2+</li></ul></td>
-                </tr>
-                <tr>
-                    <td>svg</td>
-                    <td><ul class="browserCheck"><li class="opera">9+</li><li class="chrome">Chrome 4+</li><li class="safari">3.2+</li><li style="background: 0">Opera mobile 10+</li><li style="background: 0">iOS</li><li style="background: 0">Android 3</li></ul></td>
-                </tr>
-                </tbody>
-            </table>
-
-
-
-
 
             <h2 class="title">Властивості шрифту</h2>
             <p style="text-indent: 3rem;">Шрифт змінюється за допомоогою властивостей:
@@ -271,8 +173,7 @@
                                 style="font-stretch: condensed;">guba karo mate senom</span></li>
                             <li><span class="green">normal</span>- <span
                                 style="font-stretch: condensed;">guba karo mate senom</span></li>
-                            <li><span class="green">expanded (ultra-, extra-, semi- )</span>- <span
-                                style="font-stretch: expanded">guba karo mate senom</span>
+                            <li><span class="green">expanded (ultra-, extra-, semi- )</span>- <span style="font-stretch: expanded">guba karo mate senom</span>
                             </li>
                         </ul>
                     </td>
@@ -543,8 +444,7 @@
                 <tr>
                     <td><span class="blue">user-select</span></td>
                     <td>
-                        <span style="user-select: all"><span
-                            class="green">all</span> - виділення всього вмісту</span><br>
+                        <span style="user-select: all"><span class="green">all</span> - виділення всього вмісту</span><br>
                         <span class="green">auto</span> - дефолтний стан<br>
                         <span style="user-select: none"><span class="green">none</span> - забороняє виділення</span><br>
                         <span style="user-select: text"><span class="green">text</span> - виділення тільки тексту</span>
@@ -560,7 +460,7 @@
             <p>
                 Колір використовується для зміни кольору тексту, фону, градіентів, тіней, границь та ін. Є кілька
                 основних методів для задання кольору у CSS: <br>
-                <span class="blue">Назва кольору (red, green, blue ...)<br>
+               <span class="blue">Назва кольору (red, green, blue ...)<br>
                    Шістнадцяткова система (#ffffff, #000000, #db4e44 ...), (#fff, #000 ...)<br>
                    'Функція' rgb(255, 255, 255) і rgba(255, 255, 255, 1)</span>
             </p>
