--- a/block_style.html
+++ b/block_style.html
@@ -8,9 +8,23 @@
     <link rel="stylesheet" href="./css/main.css">
   </head>
   <body>
-    <nav class="main-nav"><a class="to-home" href="index.html">< Home</a>
-      <div class="nav-block"><a class="nav-link" href="selectors.html"><span class='nav-link-num'>1</span> Селектори, Псевдокласи, Каскадність, Псевдоелементи</a><a class="nav-link" href="css_boxmodel.html"><span class='nav-link-num'>2</span> СSS Box model</a><a class="nav-link" href="measurement.html"><span class='nav-link-num'>3</span> Одиниці виміру</a><a class="nav-link" href="position.html"><span class='nav-link-num'>4</span> Позиціонування</a><a class="nav-link" href="fonts.html"><span class='nav-link-num'>5</span> Стилізація тексту</a><a class="nav-link" href="block_style.html"><span class='nav-link-num'>6</span> Стилізація елементів</a><a class="nav-link" href="media.html"><span class='nav-link-num'>7</span> @media</a><a class="nav-link" href="fonts.html"><span class='nav-link-num'>8</span> Анімація (2D, 3D)</a><a class="nav-link" href=""><span class='nav-link-num'>10</span> Display</a><a class="nav-link" href=""><span class='nav-link-num'>11</span> Префікси</a><a class="nav-link" href=""><span class='nav-link-num'>12</span> SVG</a><a class="nav-link" href=""><span class='nav-link-num'>13</span> Спрайти</a></div>
-      <div class="decorate"></div>
+    <nav class="nav-menu"><a class="home-link" href="index.html">home</a>
+      <ol class="nav-list">
+        <li><a class="nav-link" href="selectors.html">Селектори, Псевдокласи, Каскадність, Псевдоелементи</a></li>
+        <li><a class="nav-link" href="css_boxmodel.html">СSS Box model</a></li>
+        <li><a class="nav-link" href="measurement.html">Одиниці виміру</a></li>
+        <li><a class="nav-link" href="position.html">Позиціонування</a></li>
+        <li><a class="nav-link" href="fonts.html">Стилізація тексту</a></li>
+        <li><a class="nav-link" href="block_style.html">Стилізація елементів</a></li>
+        <li><a class="nav-link" href="media.html">@media</a></li>
+        <li><a class="nav-link" href="transform.html">Трансформація</a></li>
+        <li><a class="nav-link" href="animations.html">Анімація (2D, 3D)</a></li>
+        <li><a class="nav-link" href="flexbox.html">Flex-box</a></li>
+        <li><a class="nav-link" href="">Display</a></li>
+        <li><a class="nav-link" href="">Префікси</a></li>
+        <li><a class="nav-link" href="">SVG</a></li>
+        <li><a class="nav-link" href="">Спрайти</a></li>
+      </ol>
     </nav>
     <main class="main-content">
       <div class="block-style">
