--- a/index.html
+++ b/index.html
@@ -5,12 +5,51 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no"/>
   <title>HTML / CSS</title>
   <link rel="stylesheet" href="./css/main.css"/>
+  <script src="js/libs/jquery/jquery.min.js"></script>
+  <script src="js/libs/jquery/jquery.mousewheel.js"></script>
+  <script src="js/scripts/slickcustomscroll.js"></script>
 </head>
 <main class="main-content">
-  <div class="container">
+  <div class="container container-full">
     <div class="item-content">
-      <h1 class="main-title"><a href="html/html/index.html">HTML(5)</a></h1>
-      <h1 class="main-title"><a href="selectors.html">CSS(3)</a></h1>
+      <h1 class="title home-title">Welcome to our CSS/HTML tutorial</h1>
+      <h2 class="title main-subtitle">Lorem ipsum dolor</h2>
+      <div class="home-card_wrapper row">
+        <div class="col m-6 s-12">
+          <div class="home-card">
+            <h2 class="card-title"><a href="html/index.html">HTML</a></h2>
+            <ul class="theme-list">
+              <li class="theme-item"><a href="#"></a></li>
+              <li class="theme-item"><a href="#"></a></li>
+              <li class="theme-item"><a href="#"></a></li>
+              <li class="theme-item"><a href="#"></a></li>
+              <li class="theme-item"><a href="#"></a></li>
+              <li class="theme-item"><a href="#"></a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col m-6 s-12">
+          <div class="home-card">
+            <h2 class="card-title"><a href="./css_boxmodel.html">CSS</a></h2>
+            <ul class="theme-list" rel="customScroll">
+              <li class="theme-item"><a href="#">CSS Box Model</a></li>
+              <li class="theme-item"><a href="#">Одиниці виміру</a></li>
+              <li class="theme-item"><a href="#">Селектори, Псевдокласи</a></li>
+              <li class="theme-item"><a href="#">Позиціонування</a></li>
+              <li class="theme-item"><a href="#">Стилізація тексту</a></li>
+              <li class="theme-item"><a href="#">Стилізація елементів</a></li>
+              <li class="theme-item"><a href="#">@media</a></li>
+              <li class="theme-item"><a href="#">Трансформація</a></li>
+              <li class="theme-item"><a href="#">Анімація</a></li>
+              <li class="theme-item"><a href="#">flexbox</a></li>
+              <li class="theme-item"><a href="#">Display</a></li>
+              <li class="theme-item"><a href="#">Префікси</a></li>
+              <li class="theme-item"><a href="#">Спрайти</a></li>
+              <li class="theme-item"><a href="#">SVG</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </main>
