--- a/animations.html
+++ b/animations.html
@@ -8,9 +8,23 @@
     <link rel="stylesheet" href="./css/main.css">
   </head>
   <body>
-    <nav class="main-nav"><a class="to-home" href="index.html">< Home</a>
-      <div class="nav-block"><a class="nav-link" href="selectors.html"><span class='nav-link-num'>1</span> Селектори, Псевдокласи, Каскадність, Псевдоелементи</a><a class="nav-link" href="css_boxmodel.html"><span class='nav-link-num'>2</span> СSS Box model</a><a class="nav-link" href="measurement.html"><span class='nav-link-num'>3</span> Одиниці виміру</a><a class="nav-link" href="position.html"><span class='nav-link-num'>4</span> Позиціонування</a><a class="nav-link" href="fonts.html"><span class='nav-link-num'>5</span> Стилізація тексту</a><a class="nav-link" href="block_style.html"><span class='nav-link-num'>6</span> Стилізація елементів</a><a class="nav-link" href="media.html"><span class='nav-link-num'>7</span> @media</a><a class="nav-link" href="transform.html"><span class='nav-link-num'>9</span> Трансформація</a><a class="nav-link" href="animations.html"><span class='nav-link-num'>8</span> Анімація (2D, 3D)</a><a class="nav-link" href="flexbox.html"><span class='nav-link-num'>9</span> Flex-box</a><a class="nav-link" href=""><span class='nav-link-num'>10</span> Display</a><a class="nav-link" href=""><span class='nav-link-num'>11</span> Префікси</a><a class="nav-link" href=""><span class='nav-link-num'>12</span> SVG</a><a class="nav-link" href=""><span class='nav-link-num'>13</span> Спрайти</a></div>
-      <div class="decorate"></div>
+    <nav class="nav-menu"><a class="home-link" href="index.html">home</a>
+      <ol class="nav-list">
+        <li><a class="nav-link" href="selectors.html">Селектори, Псевдокласи, Каскадність, Псевдоелементи</a></li>
+        <li><a class="nav-link" href="css_boxmodel.html">СSS Box model</a></li>
+        <li><a class="nav-link" href="measurement.html">Одиниці виміру</a></li>
+        <li><a class="nav-link" href="position.html">Позиціонування</a></li>
+        <li><a class="nav-link" href="fonts.html">Стилізація тексту</a></li>
+        <li><a class="nav-link" href="block_style.html">Стилізація елементів</a></li>
+        <li><a class="nav-link" href="media.html">@media</a></li>
+        <li><a class="nav-link" href="transform.html">Трансформація</a></li>
+        <li><a class="nav-link" href="animations.html">Анімація (2D, 3D)</a></li>
+        <li><a class="nav-link" href="flexbox.html">Flex-box</a></li>
+        <li><a class="nav-link" href="">Display</a></li>
+        <li><a class="nav-link" href="">Префікси</a></li>
+        <li><a class="nav-link" href="">SVG</a></li>
+        <li><a class="nav-link" href="">Спрайти</a></li>
+      </ol>
     </nav>
     <main class="main-content">
       <div class="container">
@@ -336,7 +350,7 @@
               <td>Дозволяє залишити анімований елемент у першому ключовому кадрі до початку анімації, та затримувати їх у такому стані.</td>
             </tr>
           </table>
-          <h2 class="anim-subtitle"><span>CSS 3d transformations</span></h2>
+          <h2 class="anim-subtitle"><div class="front-card">CSS 3d transformations<div class="back-card">CSS 3d transformations</div></div></h2>
           <p>3d трансформації працюють аналогічно з 2d трансформаціями, різниця в тому, що ою'єкти мають змогу пересуватись по осі Z. Щоб почати створювати 3d трансформацію, потрібно встановити властивість <code>perspective</code> для батьківського контейнеру.
             <figure class="code">
               <span class="nc">.parent</span>&emsp;{
@@ -517,7 +531,6 @@
           </table>
           <div class="scene">
             <div class="cube-wrapper">
-              <div class="triangle"></div>
               <figure class="front"></figure>
               <figure class="back"></figure>
               <figure class="top"></figure>
