added modules, structure changes, code refactor

--- a/flexbox.html
+++ b/flexbox.html
@@ -28,7 +28,7 @@
     </nav>
     <main class="main-content">
       <div class="container">
-        <div class="flexible">
+        <div class="flex-layout">
           <h1 class="main-title"><code>flexbox</code></h1>
           <p><code>flexbox</code> це порівняно нова технологія, яка підтримується всіма браузерами з середини 2016 року (IE 11 частково).</p>
           <p>Flexbox надає інструментарій для швидкого створення складних. гнучких макетів, та функцій, які було важко реалізувати традиційними медотами CSS.
